@@ -3,7 +3,8 @@ author           = Chase Whitener <capoeirab@cpan.org>
 license          = Perl_5
 copyright_holder = Chase Whitener
 copyright_year   = 2017
-version          = 1.007
+; version          = 1.007
+; is_trial         = 1
 
 [Git::GatherDir]
 exclude_filename = Makefile.PL
@@ -14,13 +15,12 @@ exclude_filename = t/00-report-prereqs.t
 
 [@Starter]
 -remove = GatherDir
-revision = 2
+revision = 3
+managed_versions = 1
 installer = MakeMaker::Awesome
 MakeMaker::Awesome.header_file = .mm_awesome_header.pl
-
-[RewriteVersion]
-global = 1
-skip_version_provider = 1
+RewriteVersion.global = 1
+NextRelease.format = %-9v %{yyyy-MM-dd}d
 
 [AlienBuild]
 
@@ -37,15 +37,11 @@ location = root
 [OSPrereqs / !~win]
 Alien::Autotools = 1.00
 Alien::Build::Plugin::Build::Autoconf = 0.04
+
 ; require on Win32 systems
 [OSPrereqs / MSWin32]
 Alien::Build::Plugin::Build::CMake = 0
 Alien::cmake3 = 0.04
-
-[MetaProvides::Package]
-
-[NextRelease]
-format = %-9v %{yyyy-MM-dd}d
 
 [Git::Contributors]
 [GithubMeta]
@@ -62,6 +58,7 @@ skiptest = no_symlinks
 [Test::Version]
 filename_match = qr/libuv\.pm$/
 [Test::Pod::Coverage::Configurable]
+skip = Alien::libuv::Install::Files
 
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
@@ -70,6 +67,7 @@ stopword = CPAN
 stopword = github
 stopword = stopwords
 stopword = wordlist
+stopword = Ollis
 
 [CopyFilesFromBuild]
 copy = lib/Alien/libuv.pm
